@@ -101,7 +101,7 @@ class MainWindow(Tools):
     scrolled_window.add(self.acc_treeview)
     
     bin = self.main_xml.get_widget('alignment_topright')
-    self.plugin_view1 = PluginView(N_('Top right'))
+    self.plugin_view1 = PluginView(N_('Top panel'))
     bin.add(self.plugin_view1)
     bin = self.main_xml.get_widget('alignment_bottom')
     self.plugin_view2 = PluginView(N_('Bottom panel'))
